samples/_failures_safe/1761076806_acbaba_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_1396a5d8.c: In function ‘display_entries_by_level’:
./samples/SAFE/__tmp_1396a5d8.c:131:9: error: expected declaration or statement at end of input
  131 |         }
      |         ^
./samples/SAFE/__tmp_1396a5d8.c:131:9: error: expected declaration or statement at end of input
